<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="80sp"/>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingVertical="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_clear"
                style="@style/Gray.Button"
                android:onClick="onNumberClick"
                android:text="@string/ac" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_erase"
                style="@style/Gray.Button"
                android:layout_marginHorizontal="18dp"
                android:onClick="onOperationClick"
                android:text="@string/erase" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_percent"
                style="@style/Gray.Button"
                android:layout_marginEnd="18dp"
                android:onClick="onOperationClick"
                android:text="@string/percent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_obelus"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/obelus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingVertical="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_seven"
                style="@style/Dark.Button"
                android:onClick="onNumberClick"
                android:text="@string/seven" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_eight"
                style="@style/Dark.Button"
                android:layout_marginHorizontal="18dp"
                android:onClick="onNumberClick"
                android:text="@string/eight" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_nine"
                style="@style/Dark.Button"
                android:layout_marginEnd="18dp"
                android:onClick="onNumberClick"
                android:text="@string/nine" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_multiplication"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/multiplication" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingVertical="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_four"
                style="@style/Dark.Button"
                android:onClick="onNumberClick"
                android:text="@string/four" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_five"
                style="@style/Dark.Button"
                android:layout_marginHorizontal="18dp"
                android:onClick="onNumberClick"
                android:text="@string/five" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_six"
                style="@style/Dark.Button"
                android:layout_marginEnd="18dp"
                android:onClick="onNumberClick"
                android:text="@string/six" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingVertical="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_one"
                style="@style/Dark.Button"
                android:onClick="onNumberClick"
                android:text="@string/one" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_two"
                style="@style/Dark.Button"
                android:layout_marginHorizontal="18dp"
                android:onClick="onNumberClick"
                android:text="@string/two" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_three"
                style="@style/Dark.Button"
                android:layout_marginEnd="18dp"
                android:onClick="onNumberClick"
                android:text="@string/three" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingVertical="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_zero"
                style="@style/Dark.Button"
                android:layout_width="178dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="18dp"
                android:onClick="onNumberClick"
                android:text="@string/zero" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dot"
                style="@style/Dark.Button"
                android:layout_marginEnd="18dp"
                android:onClick="onNumberClick"
                android:text="@string/dot" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equal"
                style="@style/Orange.Button"
                android:onClick="onOperationClick"
                android:text="@string/equal" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>